--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,3 +235,27 @@ label[for="tempo-slider"] {
 
 .material-symbols-rounded.md-36 { font-size: 36px; }
 .material-symbols-rounded.md-48 { font-size: 48px; }
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: .5rem;
+  height: auto;
+  margin: 0 1rem 1rem;
+  font-family: var(--unchanging-value-font);
+}
+
+.site_link {
+  text-decoration: none;
+  color: var(--control-active-color);
+  font-size: 2.5rem;
+}
+
+.site_link:hover {
+  color: var(--text-color);
+}
+
+.site_link:active {
+  color: var(--accessory-gray);
+}
