--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,18 +10,16 @@
 body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  align-items: center;
+  max-height: 100svh;
   margin: 0;
   background-color: var(--dark-bg-color);
   color: var(--text-color);
-  overflow: hidden;
 }
 
 header {
-  flex-grow: 1;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  width: 50rem;
+  max-width: 100vw;
   font-family: var(--unchanging-value-font);
 }
 
@@ -37,6 +35,8 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  width: 50rem;
+  max-width: 100vw;
 }
 
 .stopwatch-container {
