--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,13 +11,15 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 100svh;
+  height: 100svh;
   margin: 0;
   background-color: var(--dark-bg-color);
   color: var(--text-color);
+  overflow: scroll;
 }
 
 header {
+  flex-grow: 1;  
   width: 50rem;
   max-width: 100vw;
   font-family: var(--unchanging-value-font);
@@ -242,7 +244,6 @@ footer {
   align-items: center;
   gap: .5rem;
   height: auto;
-  margin: 0 1rem 1rem;
   font-family: var(--unchanging-value-font);
 }
 
